--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -57,7 +57,7 @@
         image={
           "src": get_asset_url("../images/phone.png")
         },
-        content="<h2 style='color: #fff;'>Download Perfect Today!</h2><p style='color: #fff;'>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>",
+        content="<h2>Download Perfect Today!</h2><p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>",
         cta_field="782d9df3-4dc5-44dc-81ad-a0efffcf0cb2"
       %}
     </div>
