--- a/src/modules/Blog CTA.module/module.css
+++ b/src/modules/Blog CTA.module/module.css
@@ -16,17 +16,17 @@
     align-items: center;
 }
 
-.blog-cta__image {
+.blog-cta__image-column {
     margin: -80px 0;
     width: 25%;
 }
 
-.blog-cta__content {
+.blog-cta__content-column {
     padding: 40px 20px;
     width: 50%;
 }
 
-.blog-cta__button {
+.blog-cta__button-column {
     width: 25%;
 }
 
@@ -36,21 +36,26 @@
         padding: 40px 0;
     }
 
-    .blog-cta__image,
-    .blog-cta__content,
-    .blog-cta__button {
+    .blog-cta__image-column,
+    .blog-cta__content-column,
+    .blog-cta__button-column {
         width: 100%;
     }
 
-    .blog-cta__image {
+    .blog-cta__image-column {
         margin: 0;
     }
 
-    .blog-cta__content {
+    .blog-cta__image {
+        display: block;
+        margin: 0 auto;
+    }
+
+    .blog-cta__content-column {
         padding: 20px 0;
     }
 
-    .blog-cta__button {
+    .blog-cta__button-column {
         text-align: center;
     }
 }
