--- a/src/css/_typography.css
+++ b/src/css/_typography.css
@@ -9,25 +9,27 @@ body {
   line-height: 1.4;
 }
 
+/* Paragraphs */
 p {
   font-size: 1rem;
   font-weight: 400;
-  margin-top: 0;
-  margin-bottom: 1.4rem;
+  margin: 0 0 1.4rem;
 }
 
 strong {
   font-weight: 600;
 }
 
-/* Anchor Links */
+/* Links */
 a {
   color: {{ get_theme_style_setting('links_group.links.link_color.color') }};
   cursor: pointer;
   text-decoration: none;
 }
 
-a:hover, a:focus {
+a:hover,
+a:focus,
+a:active {
   color: {{ get_theme_style_setting('links_group.links.link_hover_color.color') }};
   text-decoration: underline;
 }
@@ -39,10 +41,9 @@ h3,
 h4,
 h5,
 h6 {
-  margin-top: 0;
-  margin-bottom: 1.4rem;
   font-weight: 600;
   letter-spacing: 0.05em;
+  margin: 0 0 1.4rem;
   word-break: break-word;
 }
 
@@ -94,9 +95,8 @@ h6 {
 ul,
 ol {
   list-style-position: inside;
+  margin: 1.5rem 0;
   padding-left: 0;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
 }
 
 ul li,
@@ -109,8 +109,7 @@ ul ul,
 ol ul,
 ul ol,
 ol ol {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
   padding-left: 2.8rem;
 }
 
@@ -133,18 +132,18 @@ blockquote {
 
 /* Horizontal Rules */
 hr {
-  color: #d0d0d0;
   background-color: #d0d0d0;
-  height: 1px;
   border: none;
+  color: #d0d0d0;
+  height: 1px;
 }
 
 /* Subscripts and Superscripts */
 sup,
 sub {
-  position: relative;
   font-size: 75%;
   line-height: 0;
+  position: relative;
   vertical-align: baseline;
 }
 
@@ -154,8 +153,4 @@ sup {
 
 sub {
   bottom: -0.25em;
-}
-
-.disable-focus-styles :focus {
-  outline: none;
 }
