Making minor fixes to CTA banner

--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -49,7 +49,7 @@
     </div>
 
     {% module "blog_cta"
-      path="../modules/Blog CTA",
+      path="../modules/CTA Banner",
       background_color={
         "color": "#34b5e5"
       },
