--- a/src/modules/CTA Banner.module/module.css
+++ b/src/modules/CTA Banner.module/module.css
@@ -1,7 +1,8 @@
-.blog-cta {
+.cta-banner {
   margin: 80px 0;
 }
-.blog-cta__wrapper {
+
+.cta-banner__wrapper {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -14,38 +15,47 @@
   -ms-flex-align: center;
   align-items: center;
 }
-.blog-cta__image-column {
+
+.cta-banner__image-column {
   margin: -80px 0;
   width: 25%;
 }
-.blog-cta__content-column {
+
+.cta-banner__content-column {
   padding: 40px 20px;
   width: 50%;
 }
-.blog-cta__button-column {
+
+.cta-banner__button-column {
   width: 25%;
 }
+
 @media (max-width: 767px) {
-  .blog-cta {
+  .cta-banner {
       margin: 0;
       padding: 40px 0;
   }
-  .blog-cta__image-column,
-  .blog-cta__content-column,
-  .blog-cta__button-column {
+
+  .cta-banner__image-column,
+  .cta-banner__content-column,
+  .cta-banner__button-column {
       width: 100%;
   }
-  .blog-cta__image-column {
+
+  .cta-banner__image-column {
       margin: 0;
   }
-  .blog-cta__image {
+
+  .cta-banner__image {
       display: block;
       margin: 0 auto;
   }
-  .blog-cta__content-column {
+
+  .cta-banner__content-column {
       padding: 20px 0;
   }
-  .blog-cta__button-column {
+
+  .cta-banner__button-column {
       text-align: center;
   }
 }
