--- a/src/templates/pricing.html
+++ b/src/templates/pricing.html
@@ -8,24 +8,39 @@
 <main class="body-container-wrapper">
   {% dnd_area "dnd_area" class="body-container body-container-pricing", label="Main section" %}
 
+    {# Banner Section #}
+    {% dnd_section max_width=760,
+      padding={
+        "top": 130,
+        "bottom": 130,
+        "left": 20,
+        "right": 20
+      },
+      background_image={
+        "backgroundPosition": "MIDDLE_CENTER",
+        "backgroundSize": "cover",
+        'imageUrl': get_asset_url("../images/pricing-banner.jpg")
+      },
+      vertical_alignment="MIDDLE"
+    %}
+      {% dnd_column %}
+        {% dnd_row %}
+          {% dnd_module path="@hubspot/rich_text",
+            flexbox_positioning="TOP_CENTER"
+          %}
+          {% module_attribute "html" %}
+            <div style="text-align: center">
+              <h1 style="color: #fff; margin-bottom: 0px;">Pricing</h1>
+            </div>
+          {% end_module_attribute %}
+          {% end_dnd_module %}
+        {% end_dnd_row %}
+      {% end_dnd_column %}
+    {% end_dnd_section %}
+
     {# Pricing Section #}
     {% dnd_section %}
       {% dnd_column %}
-        {% dnd_row
-          margin={
-            "top": 0,
-            "bottom": 40
-          }
-        %}
-            {% dnd_module path="@hubspot/rich_text" %}
-                {% module_attribute "html" %}
-                <div style="text-align: center;">
-                    <h1>Pricing</h1>
-                    <p>Leverage the intuitive super awesome software that saves you time and will rescue your business. Promise.</p>
-                </div>
-                {% end_module_attribute %}
-            {% end_dnd_module %}
-        {% end_dnd_row %}
         {% dnd_row %}
             {% dnd_module path="../modules/Pricing Table" %}
             {% end_dnd_module %}
