--- a/src/css/_header.css
+++ b/src/css/_header.css
@@ -1,4 +1,5 @@
 /* Header Container */
+
 .header {
   background-color: {{ get_theme_style_setting('header_group.header.header_bg_color.color') }};
 }
@@ -25,146 +26,229 @@
   }
 }
 
-/* Default Logo */
+/* Logo */
+
+.header__logo {
+  margin-right: 20px;
+}
+
 .header__logo .logo-company-name {
   color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
   font-size: 28px;
 }
 
-/* Navigation */
-#nav-toggle {
-  display: none;
-}
-
-@media screen and (max-width: 767px) {
-  .header__navigation-toggle {
-    cursor: pointer;
-    display: block;
-  }
-
-  .header__mobile-menu-icon,
-  .header__mobile-menu-icon:after,
-  .header__mobile-menu-icon:before {
-    background-color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
-    border-radius: 10px;
-    display: inline-block;
-    height: 4px;
-    width: 24px;
-  }
-
-  .header__mobile-menu-icon {
-    position: relative;
-    top: -6px;
-  }
-
-  .header__mobile-menu-icon:before {
-    top: -8px;
-  }
-
-  .header__mobile-menu-icon:after {
-    top: 8px;
-  }
-
-  .header__mobile-menu-icon:after,
-  .header__mobile-menu-icon:before {
-    content: '';
-    position: absolute;
-  }
-
-  #nav-toggle:checked ~ .header__navigation {
-    display: block;
-  }
-
-  #nav-toggle:checked + .header__navigation-toggle .header__mobile-menu-icon {
-    margin: 0 auto;
-    -webkit-transform: rotate(45deg);
-      -ms-transform: rotate(45deg);
-        transform: rotate(45deg);
-  }
-
-  #nav-toggle:checked + .header__navigation-toggle .header__mobile-menu-icon:before {
-    content: none;
-  }
-
-  #nav-toggle:checked + .header__navigation-toggle .header__mobile-menu-icon:after {
-    -webkit-transform: rotate(-90deg);
-      -ms-transform: rotate(-90deg);
-        transform: rotate(-90deg);
-    top: 0;
-  }
-
-  .menu-arrow-icon,
-  .menu-arrow-icon:after {
-    background-color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
-    border-radius: 10px;
-    display: block;
-    height: 4px;
-    width: 20px;
-  }
-
-  .menu-arrow-icon {
-    position: relative;
-    margin: 0 auto;
-    top: 8px;
-  }
-
-  .menu-arrow-icon:after {
-    content: '';
-    position: absolute;
-    -webkit-transform: rotate(-90deg);
-      -ms-transform: rotate(-90deg);
-        transform: rotate(-90deg);
-  }
-}
-
-.navigation-primary a {
-  color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
-}
-
-.navigation-primary a:hover,
-.navigation-primary a:focus,
-.navigation-primary a:active {
-  color: {{ get_theme_style_setting('header_group.header.header_menu_link_hover_color.color') }};
-}
-
-.navigation-primary .submenu.level-1 > li > a.active-item:after {
-  background-color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
-}
-
-.submenu.level-2 {
-  background-color: {{ get_theme_style_setting('header_group.header.header_bg_color.color') }};
-  border-color: {{ get_theme_style_setting('header_group.header.header_child_menu_border_color.color') }};
-}
-
-.submenu.level-2 > li {
-  border-bottom-color: {{ get_theme_style_setting('header_group.header.header_child_menu_border_color.color') }};
-}
-
-.submenu.level-2 .menu-item .menu-link:hover,
-.submenu.level-2 .menu-item .menu-link:focus {
-  background-color: {{ get_theme_style_setting('header_group.header.header_child_menu_hover_bg_color.color') }};
-  color: {{ get_theme_style_setting('header_group.header.header_child_menu_hover_color.color') }};
-}
+/* Navigation Menu */
 
 @media screen and (max-width: 767px) {
   .header .header__menu {
-    min-height: 0px;
+      min-height: 0px;
+      -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
   }
+}
 
-  .header__navigation {
-    background-color: {{ get_theme_style_setting('header_group.header.header_bg_color.color') }};
+/* Language Switcher */
+
+.header__language-switcher {
+  cursor: pointer;
+  margin-left: 20px;
+}
+
+@media(max-width: 767px) {
+  .header__language-switcher {
+    margin-left: auto;
+    margin-right: 20px;
+    -webkit-box-ordinal-group: 3;
+      -ms-flex-order: 2;
+              order: 2;
+  }
+}
+
+.header__language-switcher .lang_switcher_class {
+  position: static;
+}
+
+.header__language-switcher .lang_switcher_class .globe_class {
+  background-color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
+  border-color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 50%;
+  margin-top: 5px;
+}
+
+@media(max-width: 767px) {
+  .header__language-switcher .lang_switcher_class .globe_class {
+    height: 24px;
+    margin-top: 0;
+    width: 24px;
+  }
+}
+
+.header__language-switcher .lang_list_class {
+  background-color: {{ get_theme_style_setting('header_group.header.header_bg_color.color') }};
+  border-color: {{ get_theme_style_setting('header_group.header.header_child_menu_border_color.color') }};
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  display: block;
+  left: auto;
+  min-width: 100%;
+  opacity: 0;
+  padding-top: 0;
+  right: 0;
+  text-align: left;
+  -webkit-transform: none;
+    -ms-transform: none;
+        transform: none;
+  top: 100%;
+  visibility: hidden;
+}
+
+@media(max-width: 767px) {
+  .header__language-switcher .lang_list_class {
+    border: 0;
+    border-radius: 0;
+  }
+}
+
+.header__language-switcher:hover .lang_list_class {
+  opacity: 1;
+  visibility: visible;
+}
+
+@media(max-width: 767px) {
+  .header__language-switcher:hover .lang_list_class {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+.header__language-switcher .lang_list_class:after,
+.header__language-switcher .lang_list_class:before {
+  content: none;
+}
+
+.header__language-switcher .lang_list_class li {
+  background-color: transparent;
+  border: none;
+  line-height: 2;
+  padding: 10px;
+}
+
+@media(max-width: 767px) {
+  .header__language-switcher .lang_list_class li {
+    border-top-color: {{ get_theme_style_setting('header_group.header.header_child_menu_border_color.color') }};
+    border-top-style: solid;
+    border-top-width: 1px;
+    padding: 7px 30px;
+  }
+}
+
+.header__language-switcher .lang_list_class li:first-child {
+  border-top: none;
+  padding-top: 10px;
+}
+
+@media(max-width: 767px) {
+  .header__language-switcher .lang_list_class li:first-child {
+    border-top-color: {{ get_theme_style_setting('header_group.header.header_child_menu_border_color.color') }};
+    border-top-style: solid;
+    border-top-width: 1px;
+    padding-top: 7px;
+  }
+}
+
+.header__language-switcher .lang_list_class li:last-child {
+  border-bottom: none;
+}
+
+.header__language-switcher .lang_list_class li:hover {
+  background-color: {{ get_theme_style_setting('header_group.header.header_child_menu_hover_bg_color.color') }};
+  -webkit-transition: background-color 0.3s;
+  -o-transition: background-color 0.3s;
+  transition: background-color 0.3s;
+}
+
+@media(max-width: 767px) {
+  .header__language-switcher .lang_list_class li:hover {
+    background-color: transparent;
+  }
+}
+
+.header__language-switcher .lang_list_class li:hover a {
+  color: {{ get_theme_style_setting('header_group.header.header_child_menu_hover_color.color') }};
+}
+
+@media(max-width: 767px) {
+  .header__language-switcher .lang_list_class li:hover a {
+    color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
+  }
+}
+
+.header__language-switcher-label-current,
+.header__language-switcher .lang_list_class li a {
+  color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
+  font-family: {{ get_theme_style_setting('typography_group.typography.body_font.font') }};
+  font-size: 1rem;
+  font-weight: 400;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+}
+
+.header__language-switcher-label {
+  display: -webkit-box;
+    display: -ms-flexbox;
+      display: flex;
+  position: relative;
+}
+
+@media(max-width: 767px) {
+  .header__language-switcher-label {
+    position: static;
+  }
+}
+
+.header__language-switcher-label-current {
+  display: -webkit-box;
+    display: -ms-flexbox;
+      display: flex;
+  line-height: 2;
+  margin-left: 10px;
+  -webkit-box-align: center;
+    -ms-flex-align: center;
+      align-items: center;
+}
+
+@media(max-width: 767px) {
+  .header__language-switcher-label-current {
     display: none;
-    position: absolute;
-    right: 0;
-    top: 100%;
-    width: 100%;
   }
+}
 
-  .submenu.level-1 > li {
-    border-top-color: {{ get_theme_style_setting('header_group.header.header_child_menu_border_color.color') }};
-  }
+.header__language-switcher-label-current:hover,
+.header__language-switcher-label-current:focus,
+.header__language-switcher-label-current:active {
+  color: {{ get_theme_style_setting('header_group.header.header_menu_link_hover_color.color') }};
+}
 
-  .submenu.level-2 .menu-item {
-    border-top-color: {{ get_theme_style_setting('header_group.header.header_child_menu_border_color.color') }};
+.header__language-switcher-label-current:after {
+  border-left: 4px solid transparent;
+  border-right: 4px solid transparent;
+  border-top-color: {{ get_theme_style_setting('header_group.header.header_menu_link_color.color') }};
+  border-top-style: solid;
+  border-top-width: 6px;
+  content: "";
+  display: block;
+  height: 0;
+  margin: 3px 0 0 10px;
+  width: 0;
+}
+
+@media(max-width: 767px) {
+  .header__language-switcher.open .lang_list_class {
+    opacity: 1;
+    visibility: visible;
   }
 }
