--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,6 +3,7 @@
 {% include './_dnd_areas.css' %}
 {% include './_typography.css' %}
 {% include './_forms.css' %}
+{% include './_menus.css' %}
 {% include './_tables.css' %}
 {% include './_modules.css' %}
 {% include './_header.css' %}
