--- a/src/modules/Menu section.module/module.css
+++ b/src/modules/Menu section.module/module.css
@@ -1,12 +1,25 @@
+/* Navigation */
+
 .navigation-primary {
   display: inline-block;
-  float: right; 
+  float: right;
 }
+
+@media(max-width: 767px) {
+  .navigation-primary {
+    display: block;
+    float: none;
+  }
+}
+
+/* Menu Item Styles */
 
 .navigation-primary a {
   font-weight: 400;
-  letter-spacing: 0.1em; 
+  letter-spacing: 0.1em;
 }
+
+/* Active Menu Item Styles */
 
 .navigation-primary a.active-item {
   position: relative;
@@ -21,6 +34,8 @@
   height: 2px;
 }
 
+/* Submenus */
+
 .navigation-primary .submenu {
   list-style: none;
   padding: 0;
@@ -32,17 +47,12 @@
   text-decoration: none;
 }
 
-.hs-menu-item:hover a,
-.hs-menu-item:focus a {
-  text-decoration: none;
-} 
-
 .submenu-toggle {
   display: none;
 }
 
 .submenu {
-  float: none; 
+  float: none;
 }
 
 .submenu.level-1 {
@@ -51,27 +61,27 @@
 
 .submenu.level-1 > li {
   display: inline-block;
-  margin-right: 30px; 
-  position: relative; 
+  margin-right: 30px;
+  position: relative;
   text-transform: uppercase;
 }
 
 .submenu.level-1 > li:last-child {
-  margin-right: 0px; 
+  margin-right: 0px;
 }
 
 .submenu.level-2 {
   border-width: 1px;
   border-style: solid;
-  border-radius: 4px; 
-  left: 0; 
-  opacity: 0; 
-  position: absolute; 
-  top: 100%; 
+  border-radius: 4px;
+  left: 0;
+  opacity: 0;
+  position: absolute;
+  top: 100%;
   transition: visibility 0s, opacity 0.3s;
-  visibility: hidden; 
-  width: 220px; 
-  z-index: 2; 
+  visibility: hidden;
+  width: 220px;
+  z-index: 2;
 }
 
 .submenu.level-2 > li {
@@ -115,16 +125,20 @@
   visibility: hidden;
 }
 
+/* Mobile Navigation */
 @media screen and (min-width: 768px) and (max-width: 1100px) {
   .submenu.level-1 > li {
-    margin-right: 20px; 
+    margin-right: 20px;
   }
 }
 
 @media (max-width: 767px) {
-  .navigation-primary {
-    display: block;
-    float: none; 
+  .header__navigation {
+    display: none;
+    position: absolute;
+    right: 0;
+    top: 100%;
+    width: 100%;
   }
 
   .navigation-primary .submenu.level-1 > li > a.active-item:after {
@@ -180,7 +194,7 @@
   .submenu > .has-submenu > .menu-arrow-bg,
   .submenu .menu-arrow-bg {
     display: block;
-    height: 20px; 
+    height: 20px;
     width: 20px;
     margin-left: auto;
     margin-right: 30px;
@@ -208,8 +222,8 @@
 
   .submenu.level-2 .menu-item {
     padding: 0;
-    border-top-width: 1px; 
-    border-top-style: solid; 
+    border-top-width: 1px;
+    border-top-style: solid;
     border-bottom: none;
   }
 
@@ -235,5 +249,89 @@
 
   .submenu.level-3 .menu-item .menu-link {
     padding: 7px 90px;
+  }
+}
+
+/* Mobile Navigation Toggle */
+#nav-toggle {
+  display: none;
+}
+
+@media screen and (max-width: 767px) {
+  .header__navigation-toggle {
+    cursor: pointer;
+    display: block;
+  }
+
+  .header__mobile-menu-icon,
+  .header__mobile-menu-icon:after,
+  .header__mobile-menu-icon:before {
+    border-radius: 10px;
+    display: inline-block;
+    height: 4px;
+    width: 24px;
+  }
+
+  .header__mobile-menu-icon {
+    position: relative;
+    top: -6px;
+  }
+
+  .header__mobile-menu-icon:before {
+    top: -8px;
+  }
+
+  .header__mobile-menu-icon:after {
+    top: 8px;
+  }
+
+  .header__mobile-menu-icon:after,
+  .header__mobile-menu-icon:before {
+    content: '';
+    position: absolute;
+  }
+
+  #nav-toggle:checked ~ .header__navigation {
+    display: block;
+  }
+
+  #nav-toggle:checked + .header__navigation-toggle .header__mobile-menu-icon {
+    margin: 0 auto;
+    -webkit-transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+        transform: rotate(45deg);
+  }
+
+  #nav-toggle:checked + .header__navigation-toggle .header__mobile-menu-icon:before {
+    content: none;
+  }
+
+  #nav-toggle:checked + .header__navigation-toggle .header__mobile-menu-icon:after {
+    -webkit-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
+        transform: rotate(-90deg);
+    top: 0;
+  }
+
+  .menu-arrow-icon,
+  .menu-arrow-icon:after {
+    border-radius: 10px;
+    display: block;
+    height: 4px;
+    width: 20px;
+  }
+
+  .menu-arrow-icon {
+    position: relative;
+    margin: 0 auto;
+    top: 8px;
+  }
+
+  .menu-arrow-icon:after {
+    content: '';
+    position: absolute;
+    -webkit-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
+        transform: rotate(-90deg);
   }
 }
