Switching a element for button

--- a/src/templates/blog-post.html
+++ b/src/templates/blog-post.html
@@ -41,8 +41,8 @@
         <div class="blog-post__footer">
           <div class="blog-post__footer__row-one">
             <div class="blog-post__comments-buttons">
-                <a class="blog-post__show-comments button button__primary">View Comments</a>
-                <a class="blog-post__hide-comments hide-button button button__primary">Hide Comments</a>
+                <button class="blog-post__show-comments button button__primary">View Comments</button>
+                <button class="blog-post__hide-comments hide-button button button__primary">Hide Comments</button>
             </div>
             <div class="blog-post__social-sharing">
               <div class="social-links">
