--- a/src/css/_typography.css
+++ b/src/css/_typography.css
@@ -6,7 +6,6 @@ body {
   color: {{ get_theme_style_setting('typography_group.typography.body_font.color') }};
   font-family: {{ get_theme_style_setting('typography_group.typography.body_font.font') }};
   font-size: {{ get_theme_style_setting('typography_group.typography.body_font.size.value', 'typography_group.typography.body_font.size.units') }};
-  font-weight: {{ get_theme_style_setting('typography_group.typography.body_font.styles.font-weight') }};
   line-height: 1.4;
 }
 
@@ -57,42 +56,54 @@ h1 {
   color: {{ get_theme_style_setting('typography_group.typography.heading_one.color') }};
   font-family: {{ get_theme_style_setting('typography_group.typography.heading_one.font') }};
   font-size: {{ get_theme_style_setting('typography_group.typography.heading_one.size.value', 'typography_group.typography.heading_one.size.units') }};
+  font-style: {{ get_theme_style_setting('typography_group.typography.heading_one.styles.font-style') }};
   font-weight: {{ get_theme_style_setting('typography_group.typography.heading_one.styles.font-weight') }};
+  text-decoration: {{ get_theme_style_setting('typography_group.typography.heading_one.styles.text-decoration') }};
 }
 
 h2 {
   color: {{ get_theme_style_setting('typography_group.typography.heading_two.color') }};
   font-family: {{ get_theme_style_setting('typography_group.typography.heading_two.font') }};
   font-size: {{ get_theme_style_setting('typography_group.typography.heading_two.size.value', 'typography_group.typography.heading_two.size.units') }};
+  font-style: {{ get_theme_style_setting('typography_group.typography.heading_two.styles.font-style') }};
   font-weight: {{ get_theme_style_setting('typography_group.typography.heading_two.styles.font-weight') }};
+  text-decoration: {{ get_theme_style_setting('typography_group.typography.heading_two.styles.text-decoration') }};
 }
 
 h3 {
   color: {{ get_theme_style_setting('typography_group.typography.heading_three.color') }};
   font-family: {{ get_theme_style_setting('typography_group.typography.heading_three.font') }};
   font-size: {{ get_theme_style_setting('typography_group.typography.heading_three.size.value', 'typography_group.typography.heading_three.size.units') }};
+  font-style: {{ get_theme_style_setting('typography_group.typography.heading_three.styles.font-style') }};
   font-weight: {{ get_theme_style_setting('typography_group.typography.heading_three.styles.font-weight') }};
+  text-decoration: {{ get_theme_style_setting('typography_group.typography.heading_three.styles.text-decoration') }};
 }
 
 h4 {
   color: {{ get_theme_style_setting('typography_group.typography.heading_four.color') }};
   font-family: {{ get_theme_style_setting('typography_group.typography.heading_four.font') }};
   font-size: {{ get_theme_style_setting('typography_group.typography.heading_four.size.value', 'typography_group.typography.heading_four.size.units') }};
+  font-style: {{ get_theme_style_setting('typography_group.typography.heading_four.styles.font-style') }};
   font-weight: {{ get_theme_style_setting('typography_group.typography.heading_four.styles.font-weight') }};
+  text-decoration: {{ get_theme_style_setting('typography_group.typography.heading_four.styles.text-decoration') }};
 }
 
 h5 {
   color: {{ get_theme_style_setting('typography_group.typography.heading_five.color') }};
   font-family: {{ get_theme_style_setting('typography_group.typography.heading_five.font') }};
   font-size: {{ get_theme_style_setting('typography_group.typography.heading_five.size.value', 'typography_group.typography.heading_five.size.units') }};
+  font-style: {{ get_theme_style_setting('typography_group.typography.heading_five.styles.font-style') }};
   font-weight: {{ get_theme_style_setting('typography_group.typography.heading_five.styles.font-weight') }};
+  text-decoration: {{ get_theme_style_setting('typography_group.typography.heading_five.styles.text-decoration') }};
 }
 
 h6 {
   color: {{ get_theme_style_setting('typography_group.typography.heading_six.color') }};
   font-family: {{ get_theme_style_setting('typography_group.typography.heading_six.font') }};
   font-size: {{ get_theme_style_setting('typography_group.typography.heading_six.size.value', 'typography_group.typography.heading_six.size.units') }};
+  font-style: {{ get_theme_style_setting('typography_group.typography.heading_six.styles.font-style') }};
   font-weight: {{ get_theme_style_setting('typography_group.typography.heading_six.styles.font-weight') }};
+  text-decoration: {{ get_theme_style_setting('typography_group.typography.heading_six.styles.text-decoration') }};
 }
 
 /* Lists */
